files/manifests/cobweb/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: cobweb
  namespace: cobweb
  labels:
    app: cobweb
spec:
  rules:
    - host: j3o.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cobweb
                port:
                  number: 80
    - host: www.techn.is
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cobweb
                port:
                  number: 80
    - host: cobweb.techn.is
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cobweb
                port:
                  number: 80
